[comment]modify some comments

--- a/samples/dash-if-reference-player/index.html
+++ b/samples/dash-if-reference-player/index.html
@@ -38,7 +38,7 @@
     <!-- Google Cast -->
     <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 
-    <!-- haohao 打印日志消息 -->
+    <!-- 打印日志消息 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/log4javascript/1.4.15/log4javascript.js"></script>
 
 </head>
